[gd_scene load_steps=11 format=3 uid="uid://biuba22ol7yd5"]

[ext_resource type="Script" path="res://scripts/playerKart.gd" id="1_wolnf"]
[ext_resource type="PackedScene" uid="uid://jgst4ctmbads" path="res://assets/models/gokart.tscn" id="2_p0d37"]
[ext_resource type="Texture2D" uid="uid://cv62c21c8cf7r" path="res://assets/sprite/backThin.png" id="3_cc3cm"]
[ext_resource type="Texture2D" uid="uid://c6oj3i2e01ouk" path="res://assets/sprite/frontThin.png" id="4_hg06h"]
[ext_resource type="Theme" uid="uid://dx6m21m2e8ni0" path="res://assets/normal.tres" id="5_4deyf"]
[ext_resource type="AudioStream" uid="uid://bpth12g2qy4kp" path="res://assets/sound/engine.wav" id="5_thojk"]
[ext_resource type="Texture2D" uid="uid://c5sm3yrgaeieg" path="res://assets/sprite/speedometerBG.png" id="6_lykrd"]
[ext_resource type="Texture2D" uid="uid://2i2w246bxytx" path="res://assets/sprite/dial.png" id="7_p7yf3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_p12rf"]

[sub_resource type="SphereShape3D" id="SphereShape3D_sr2hn"]
radius = 3.07393

[node name="Kart" type="Node3D"]
script = ExtResource("1_wolnf")

[node name="Body" parent="." instance=ExtResource("2_p0d37")]

[node name="CamGoal" type="Node3D" parent="Body"]
transform = Transform3D(1, -6.90192e-08, 1.60647e-07, 0, 0.918791, 0.394744, -1.74846e-07, -0.394744, 0.918791, 7.51193e-07, 1.84585, 4.29633)

[node name="Back2" type="Sprite3D" parent="Body"]
transform = Transform3D(0.303356, 0, 0, 0, 0.303356, 0, 0, 0, 0.303356, 0, 0.571953, 0.256647)
layers = 3
billboard = 2
texture_filter = 0
texture = ExtResource("3_cc3cm")

[node name="Front2" type="Sprite3D" parent="Body"]
transform = Transform3D(0.303356, 0, 0, 0, 0.303356, 0, 0, 0, 0.303356, 0, 0.571953, 0.254266)
layers = 3
billboard = 2
texture_filter = 0
texture = ExtResource("4_hg06h")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Body"]
stream = ExtResource("5_thojk")

[node name="Vehicle" type="CharacterBody3D" parent="."]

[node name="Collision" type="CollisionShape3D" parent="Vehicle"]
shape = SubResource("SphereShape3D_p12rf")

[node name="DetectPunch" type="Area3D" parent="Vehicle"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Vehicle/DetectPunch"]
shape = SubResource("SphereShape3D_sr2hn")

[node name="GroundRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.383039, 0)
target_position = Vector3(0, -1.3, 0)

[node name="TerrainRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0105441, 0.189712)
target_position = Vector3(0, -0.7, 0)
collision_mask = 2

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 3.83647e-07, -2.17578e-06, 0, 0.984808, 0.173648, 2.20934e-06, -0.173648, 0.984808, -8.72261e-06, 1.48474, 3.94806)
current = true
fov = 90.0

[node name="Spedometer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_4deyf")

[node name="Speedometer" type="TextureRect" parent="Spedometer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
texture = ExtResource("6_lykrd")

[node name="SpeedometerDial" type="TextureRect" parent="Spedometer/Speedometer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_vertical = 0
pivot_offset = Vector2(128, 128)
texture = ExtResource("7_p7yf3")

[node name="Speed" type="Label" parent="Spedometer/Speedometer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "0m/s"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
